--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
     "test:e2e": "playwright test"
   },
   "dependencies": {
+    "lucide-react": "^0.562.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "recharts": "^3.6.0",
-    "lucide-react": "^0.562.0"
+    "react-is": "^19.2.3",
+    "recharts": "^3.6.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.35.0",
     "@types/node": "^20.12.7",
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
-    "@playwright/test": "^1.35.0",
     "vite": "^6.2.0"
   }
 }
