Perf: split de chunks (react/recharts/xlsx/lucide) e import dinâmico do xlsx
PWA: adiciona vite-plugin-pwa (manifest, SW, offline, ícone SVG) com carregamento dinâmico no vite.config; inclui public/icon.svg

Docs: README com Live Demo e instrução PWA

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@playwright/test": "^1.35.0",
     "@types/node": "^20.12.7",
     "@vitejs/plugin-react": "^5.0.0",
+    "vite-plugin-pwa": "^0.20.5",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
