--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview",
     "typecheck": "tsc --noEmit",
     "test:e2e:install": "playwright install --with-deps",
-    "test:e2e": "playwright test"
+    "test:e2e": "playwright test",
+    "lhci": "lhci autorun --config=.lighthouserc.json"
   },
   "dependencies": {
     "lucide-react": "^0.562.0",
@@ -20,11 +21,12 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@lhci/cli": "^0.13.0",
     "@playwright/test": "^1.35.0",
     "@types/node": "^20.12.7",
     "@vitejs/plugin-react": "^5.0.0",
-    "vite-plugin-pwa": "^0.20.5",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vite-plugin-pwa": "^0.20.5"
   }
 }
