test(e2e): valida DRE (descontos) e soma de variáveis; fix(lhci): coletar via 127.0.0.1 raiz

--- a/.lighthouserc.json
+++ b/.lighthouserc.json
@@ -1,9 +1,9 @@
 {
   "ci": {
     "collect": {
-      "startServerCommand": "npm run preview -- --port 4174",
+      "startServerCommand": "npm run preview -- --host 127.0.0.1 --port 4174",
       "url": [
-        "http://localhost:4174/Lucios1000-novos-apps/"
+        "http://127.0.0.1:4174/"
       ],
       "numberOfRuns": 3,
       "settings": {
