--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "typecheck": "tsc --noEmit",
-    "test": "echo \"Sem testes configurados ainda\"",
+    "test": "vitest run",
     "test:e2e": "playwright test",
     "test:e2e:install": "npx playwright install --with-deps"
   },
